[PRMT-1228] Added POST /messages api to store messages with validation
